--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "d3-shape": "^1.3.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
