--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-modal-selector": "^1.1.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-spinkit": "^1.5.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "^9.6.4",
     "react-native-svg-charts": "^5.3.0",
